商城业务-认证服务-MD5&盐值加密

--- a/gulimall-third-party/pom.xml
+++ b/gulimall-third-party/pom.xml
@@ -38,21 +38,32 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
         <!-- Spring Boot Web依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
         <!-- Spring Cloud OpenFeign依赖 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
+
         <!-- 阿里云OSS依赖 -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alicloud-oss</artifactId>
         </dependency>
+
+
+        <!--邮件配置-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
 
         <!-- 测试依赖 -->
         <dependency>
