--- a/gulimall-third-party/src/main/resources/bootstrap.properties
+++ b/gulimall-third-party/src/main/resources/bootstrap.properties
@@ -1,8 +1,20 @@
+# 应用名称
 spring.application.name=gulimall-third-party
+
+# Nacos配置服务器地址
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
+
+# Nacos配置命名空间
 spring.cloud.nacos.config.namespace=c2f860a9-f84e-4ed1-add9-a471a370ce51
 
-
+# 配置外部扩展配置0 - OSS配置
 spring.cloud.nacos.config.ext-config[0].data-id=oss.yml
 spring.cloud.nacos.config.ext-config[0].group=DEFAULT_GROUP
+# 是否启用自动刷新
 spring.cloud.nacos.config.ext-config[0].refresh=true
+
+# 配置外部扩展配置1 - 邮件服务配置
+spring.cloud.nacos.config.ext-config[1].data-id=mail.yml
+spring.cloud.nacos.config.ext-config[1].group=DEFAULT_GROUP
+# 是否启用自动刷新
+spring.cloud.nacos.config.ext-config[1].refresh=true
