--- a/gulimall-auth-server/pom.xml
+++ b/gulimall-auth-server/pom.xml
@@ -75,6 +75,12 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+            <version>2.0.0.RELEASE</version>
+        </dependency>
+
         <!-- 开发工具，自动重启和热部署等 -->
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
