--- a/gulimall-auth-server/src/main/resources/application.properties
+++ b/gulimall-auth-server/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-spring.application.name=gulimall-auth-server
+##服务追踪
+#spring.zipkin.base-url=http://192.168.56.10:9411/
+##关闭服务发现
+#spring.zipkin.discovery-client-enabled=false
+#spring.zipkin.sender.type=web
+##配置采样器
+#spring.sleuth.sampler.probability=1
+#
+##微信相关配置
+## 微信开放平台 appid
+#wx.open.app_id=
+## 微信开放平台 appsecret
+#wx.open.app_secret=
+## 微信开放平台 重定向url
+#wx.open.redirect_url=http://guli.shop/api/ucenter/wx/callback
