商城业务-购物车-ThreadLocal用户身份鉴别

--- a/gulimall-cart/pom.xml
+++ b/gulimall-cart/pom.xml
@@ -66,12 +66,12 @@
         </dependency>
 
         <!-- 开发工具，自动重启等 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-devtools</artifactId>-->
+<!--            <scope>runtime</scope>-->
+<!--            <optional>true</optional>-->
+<!--        </dependency>-->
 
         <!-- Redis客户端，这里选择使用jedis -->
         <dependency>
