--- a/gulimall-cart/src/main/resources/application.properties
+++ b/gulimall-cart/src/main/resources/application.properties
@@ -1,7 +1,16 @@
 ##服务追踪
-#spring.zipkin.base-url=http://192.168.77.130:9411/
+#spring.zipkin.base-url=http://192.168.56.10:9411/
 ##关闭服务发现
 #spring.zipkin.discovery-client-enabled=false
 #spring.zipkin.sender.type=web
 ##配置采样器
 #spring.sleuth.sampler.probability=1
+
+
+# Gulimall线程池配置
+# core-size: 线程池的基本大小。当线程池中的线程数量少于这个值时，即使当前没有任务需要执行，线程池也会创建线程直到达到这个数量。
+gulimall.thread.core-size=20
+# max-size: 线程池的最大大小。当线程池中的线程数量超过这个值时，如果还有任务需要执行，超出部分的任务将会被拒绝执行。
+gulimall.thread.max-size=200
+# keep-alive-time: 线程池中空闲线程的存活时间。当线程池中的线程数量超过core-size且线程空闲时间超过这个值时，线程将被终止并从线程池中移除。
+gulimall.thread.keep-alive-time=10
