--- a/gulimall-order/src/main/resources/application.properties
+++ b/gulimall-order/src/main/resources/application.properties
@@ -1,1 +1,35 @@
 
+
+gulimall.thread.coreSize=20
+gulimall.thread.maxSize=200
+gulimall.thread.keepAliveTime=10
+
+#支付宝相关的配置
+alipay.app_id=
+alipay.merchant_private_key=
+alipay.alipay_public_key=
+alipay.notify_url=http://hjl.mynatapp.cc/payed/notify
+alipay.return_url=http://member.gulimall.com/memberOrder.html
+alipay.sign_type=RSA2
+alipay.charset=utf-8
+alipay.gatewayUrl=https://openapi.alipaydev.com/gateway.do
+
+
+
+#微信相关配置
+wx.appId=
+wx.mchId=
+wx.mchKey=
+wx.notifyUrl=http://hjl.mynatapp.cc/pay/notify
+wx.returnUrl=http://member.gulimall.com/memberOrder.html
+
+
+
+
+#服务追踪
+spring.zipkin.base-url=http://192.168.56.10:9411/
+#关闭服务发现
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+#配置采样器
+spring.sleuth.sampler.probability=1
