--- a/gulimall-order/src/main/resources/application.properties
+++ b/gulimall-order/src/main/resources/application.properties
@@ -1,35 +1,39 @@
-
-
-gulimall.thread.coreSize=20
-gulimall.thread.maxSize=200
-gulimall.thread.keepAliveTime=10
-
-#支付宝相关的配置
-alipay.app_id=
-alipay.merchant_private_key=
-alipay.alipay_public_key=
-alipay.notify_url=http://hjl.mynatapp.cc/payed/notify
-alipay.return_url=http://member.gulimall.com/memberOrder.html
-alipay.sign_type=RSA2
-alipay.charset=utf-8
-alipay.gatewayUrl=https://openapi.alipaydev.com/gateway.do
+# Gulimall线程池配置
+# core-size: 线程池的基本大小。当线程池中的线程数量少于这个值时，即使当前没有任务需要执行，线程池也会创建线程直到达到这个数量。
+gulimall.thread.core-size=20
+# max-size: 线程池的最大大小。当线程池中的线程数量超过这个值时，如果还有任务需要执行，超出部分的任务将会被拒绝执行。
+gulimall.thread.max-size=200
+# keep-alive-time: 线程池中空闲线程的存活时间。当线程池中的线程数量超过core-size且线程空闲时间超过这个值时，线程将被终止并从线程池中移除。
+gulimall.thread.keep-alive-time=10
 
 
 
-#微信相关配置
-wx.appId=
-wx.mchId=
-wx.mchKey=
-wx.notifyUrl=http://hjl.mynatapp.cc/pay/notify
-wx.returnUrl=http://member.gulimall.com/memberOrder.html
+##支付宝相关的配置
+#alipay.app_id=
+#alipay.merchant_private_key=
+#alipay.alipay_public_key=
+#alipay.notify_url=http://hjl.mynatapp.cc/payed/notify
+#alipay.return_url=http://member.gulimall.com/memberOrder.html
+#alipay.sign_type=RSA2
+#alipay.charset=utf-8
+#alipay.gatewayUrl=https://openapi.alipaydev.com/gateway.do
+#
+#
+#
+##微信相关配置
+#wx.appId=
+#wx.mchId=
+#wx.mchKey=
+#wx.notifyUrl=http://hjl.mynatapp.cc/pay/notify
+#wx.returnUrl=http://member.gulimall.com/memberOrder.html
 
 
 
 
-#服务追踪
-spring.zipkin.base-url=http://192.168.56.10:9411/
-#关闭服务发现
-spring.zipkin.discovery-client-enabled=false
-spring.zipkin.sender.type=web
-#配置采样器
-spring.sleuth.sampler.probability=1
+##服务追踪
+#spring.zipkin.base-url=http://192.168.56.10:9411/
+##关闭服务发现
+#spring.zipkin.discovery-client-enabled=false
+#spring.zipkin.sender.type=web
+##配置采样器
+#spring.sleuth.sampler.probability=1
