商城业务-订单服务-构造订单项数据

--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,8 @@
         <module>gulimall-product</module>
         <module>gulimall-search</module>
         <module>gulimall-seckill</module>
-        <module>gulimall-test-sso-client</module>
-        <module>gulimall-test-sso-server</module>
+<!--        <module>gulimall-test-sso-client</module>-->
+<!--        <module>gulimall-test-sso-server</module>-->
         <module>gulimall-third-party</module>
         <module>gulimall-ware</module>
 
