--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -1,34 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <!--     Maven 构建工具使用 Maven 4.0.0 版本的模型规范来解析和处理该 POM 文件-->
-    <modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
         <artifactId>gulimall</artifactId>
         <groupId>com.atguigu.gulimall</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+    <!--     Maven 构建工具使用 Maven 4.0.0 版本的模型规范来解析和处理该 POM 文件-->
+    <modelVersion>4.0.0</modelVersion>
+
+    <!-- 定义项目依赖的属性 -->
+    <properties>
+        <!-- 指定Java版本 -->
+        <java.version>1.8</java.version>
+        <!-- 指定Spring Cloud版本 -->
+        <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
+    </properties>
 
     <artifactId>gulimall-common</artifactId>
     <description>每一个微服务公共的依赖，bean，工具类等</description>
 
-    <build>
-        <plugins>
-            <!--配置Maven编译插件-->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
     <!-- 项目依赖配置 -->
     <dependencies>
@@ -137,25 +130,48 @@
 
 
 
-        <!-- 链路追踪Sleuth依赖（已注释） -->
+        <!-- 链路追踪Sleuth依赖（ -->
         <!-- 引入链路追踪sleuth -->
-        <!--        <dependency>-->
-        <!--            <groupId>org.springframework.cloud</groupId>-->
-        <!--            <artifactId>spring-cloud-starter-sleuth</artifactId>-->
-        <!--            <version>2.1.0.RELEASE</version>-->
-        <!--        </dependency>-->
-        <!-- 引入Zipkin进行链路追踪的依赖（已注释） -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+            <version>2.1.0.RELEASE</version>
+        </dependency>
+
+        <!-- 引入Zipkin进行链路追踪的依赖 -->
         <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-zipkin -->
-        <!--        <dependency>-->
-        <!--            <groupId>org.springframework.cloud</groupId>-->
-        <!--            <artifactId>spring-cloud-starter-zipkin</artifactId>-->
-        <!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
     </dependencies>
 
 
+    <!--
+    <dependencyManagement> 元素用于定义项目中所有依赖的版本管理，
+    其中包含的 <dependencies> 元素列出的所有依赖都会被此部分定义的版本约束所管理。
+     -->
     <dependencyManagement>
         <dependencies>
-            <!-- Spring Cloud Alibaba 依赖管理 -->
+            <!--
+            定义 Spring Cloud 的依赖版本管理。
+            groupId: 组织标识符，这里指定了 org.springframework.cloud。
+            artifactId: 项目标识符，这里指定了 spring-cloud-dependencies。
+            version: 版本号，使用了属性 ${spring-cloud.version} 来指定版本。
+            type: 依赖类型，这里指定了 pom，表示是一个 Maven POM 文件。
+            scope: 依赖范围，这里指定了 import，允许依赖声明的范围被包含进当前 POM 文件。
+             -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <!--
+            定义 Spring Cloud Alibaba 的依赖版本管理。
+            这里指定了 Alibaba 云服务相关的依赖版本，以便在项目中统一使用。
+            -->
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
@@ -165,5 +181,22 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+
+    <build>
+        <plugins>
+            <!--配置Maven编译插件-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
