--- a/gulimall-order/src/main/resources/application.yml
+++ b/gulimall-order/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     username: root
     password: root
     url: jdbc:mysql://192.168.56.10:3306/gulimall_oms
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   # Redis缓存配置
   redis:
