--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     username: root # 数据库用户名
     password: root # 数据库密码
     url: jdbc:mysql://192.168.56.10:3306/gulimall_pms # 数据库连接URL
-    driver-class-name: com.mysql.jdbc.Driver # 数据库驱动类名
+    driver-class-name: com.mysql.cj.jdbc.Driver # 数据库驱动类名
   # 云配置，这里配置Nacos服务发现
   cloud:
     nacos:
