--- a/gulimall-ware/src/main/resources/application.yml
+++ b/gulimall-ware/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     username: root
     password: root
     url: jdbc:mysql://192.168.56.10:3306/gulimall_wms
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   # 服务发现配置
   cloud:
@@ -24,6 +24,14 @@ spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
 
+  rabbitmq:
+    host: 114.55.178.56
+    port: 5672
+    virtual-host: /
+    listener:
+      simple:
+        acknowledge-mode: manual
+
 # MyBatis Plus配置
 mybatis-plus:
   # Mapper文件位置
@@ -32,8 +40,7 @@ mybatis-plus:
     db-config:
       # 主键类型配置
       id-type: auto
-
 # 日志级别配置
 logging:
   level:
-    com.atguigu: debug
+    com.atguigu.gulimall: debug
