--- a/gulimall-product/src/main/resources/application.properties
+++ b/gulimall-product/src/main/resources/application.properties
@@ -25,3 +25,12 @@ gulimall.thread.max-size=200
 gulimall.thread.keep-alive-time=10
 
 spring.session.store-type=redis
+
+
+#服务追踪
+spring.zipkin.base-url=http://192.168.56.10:9411/
+#关闭服务发现
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+#配置采样器
+spring.sleuth.sampler.probability=1
