--- a/gulimall-third-party/pom.xml
+++ b/gulimall-third-party/pom.xml
@@ -78,6 +78,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!-- 应用监控 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
