--- a/gulimall-auth-server/src/main/resources/application.yml
+++ b/gulimall-auth-server/src/main/resources/application.yml
@@ -19,6 +19,8 @@ spring:
       transport:
         # 配置Sentinel控制台地址
         dashboard: localhost:8080
+        # Sentinel通信端口，默认8719端口，如果被占用会自动寻找未被占用的端口
+        port: 8719
 
   # 配置Redis连接信息
   redis:
