--- a/gulimall-search/src/main/resources/application.yml
+++ b/gulimall-search/src/main/resources/application.yml
@@ -25,16 +25,13 @@ spring:
   session:
     store-type: redis # 使用Redis存储Session
 
-#    sentinel:
-#      transport:
-#        #配置sentinel dashboard地址
-#        dashboard: localhost:8080
-#
-
-##开启feign对sentinel的支持
-#feign:
-#  sentinel:
-#    enabled: true
+    # Sentinel配置
+    sentinel:
+      transport:
+        # 配置Sentinel控制台地址
+        dashboard: localhost:8080
+        # Sentinel通信端口，默认8719端口，如果被占用会自动寻找未被占用的端口
+        port: 8719
 
 # 配置日志信息
 logging:
@@ -45,10 +42,14 @@ logging:
     # 设置根日志级别的级别为warn
     root: warn
 
+#开启feign对sentinel的支持
+feign:
+  sentinel:
+    enabled: true
 
-##暴露所有端点
-#management:
-#  endpoints:
-#    web:
-#      exposure:
-#        include: '*'
+#暴露所有端点
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
