--- a/gulimall-coupon/src/main/resources/application.properties
+++ b/gulimall-coupon/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-#spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
-#spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+
+#开启debug日志
+logging.level.org.springframework.cloud.openfeign=debug
+logging.level.org.springframework.cloud.sleuth=debug
 
 #服务追踪
 spring.zipkin.base-url=http://192.168.56.10:9411/
