--- a/gulimall-gateway/src/main/resources/application.properties
+++ b/gulimall-gateway/src/main/resources/application.properties
@@ -2,8 +2,12 @@ spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 spring.application.name=gulimall-gateway
 server.port=88
 
+#开启debug日志
+logging.level.org.springframework.cloud.openfeign=debug
+logging.level.org.springframework.cloud.sleuth=debug
+
 #服务追踪
-spring.zipkin.base-url=http://192.168.77.130:9411/
+spring.zipkin.base-url=http://192.168.56.10:9411/
 #关闭服务发现
 spring.zipkin.discovery-client-enabled=false
 spring.zipkin.sender.type=web
