--- a/gulimall-member/src/main/resources/application.properties
+++ b/gulimall-member/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.thymeleaf.cache=false
 
+#开启debug日志
+logging.level.org.springframework.cloud.openfeign=debug
+logging.level.org.springframework.cloud.sleuth=debug
+
 #服务追踪
 spring.zipkin.base-url=http://192.168.56.10:9411/
 #关闭服务发现
