--- a/gulimall-order/src/main/resources/application.properties
+++ b/gulimall-order/src/main/resources/application.properties
@@ -7,22 +7,14 @@ gulimall.thread.max-size=200
 gulimall.thread.keep-alive-time=10
 
 
+#开启debug日志
+logging.level.org.springframework.cloud.openfeign=debug
+logging.level.org.springframework.cloud.sleuth=debug
 
-
-##微信相关配置
-#wx.appId=
-#wx.mchId=
-#wx.mchKey=
-#wx.notifyUrl=http://hjl.mynatapp.cc/pay/notify
-#wx.returnUrl=http://member.gulimall.com/memberOrder.html
-
-
-
-
-##服务追踪
-#spring.zipkin.base-url=http://192.168.56.10:9411/
-##关闭服务发现
-#spring.zipkin.discovery-client-enabled=false
-#spring.zipkin.sender.type=web
-##配置采样器
-#spring.sleuth.sampler.probability=1
+#服务追踪
+spring.zipkin.base-url=http://192.168.56.10:9411/
+#关闭服务发现
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+#配置采样器
+spring.sleuth.sampler.probability=1
