--- a/gulimall-product/src/main/resources/application.properties
+++ b/gulimall-product/src/main/resources/application.properties
@@ -27,6 +27,10 @@ gulimall.thread.keep-alive-time=10
 spring.session.store-type=redis
 
 
+#开启debug日志
+logging.level.org.springframework.cloud.openfeign=debug
+logging.level.org.springframework.cloud.sleuth=debug
+
 #服务追踪
 spring.zipkin.base-url=http://192.168.56.10:9411/
 #关闭服务发现
