--- a/gulimall-ware/src/main/resources/application.properties
+++ b/gulimall-ware/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+#开启debug日志
+logging.level.org.springframework.cloud.openfeign=debug
+logging.level.org.springframework.cloud.sleuth=debug
+
+#服务追踪
+spring.zipkin.base-url=http://192.168.56.10:9411/
+#关闭服务发现
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+#配置采样器
+spring.sleuth.sampler.probability=1
